--- a/jobs/sdk.yml
+++ b/jobs/sdk.yml
@@ -21,29 +21,31 @@
           mkdir -p {build}
           cd {build}
 
-          if not exist discord.zip (
+          if [ ! -f discord.zip ]; then
               curl -o discord.zip \
                   https://dl-game-sdk.discordapp.net/{discord_version}/discord_game_sdk.zip
               7z x -odiscord discord.zip
-          )
+          fi
 
           mkdir -p {install}/include
           mkdir -p {install}/lib
-          cp -Rfv /app/opt/python/bin                            {install}/
-          cp -Rfv /app/opt/python/include/python{python_version} {install}/include/
-          cp -Rfv /app/opt/python/lib                            {install}/
+          mkdir -p {install}/lib/python{python_version}/site-packages/panda3d-1.11.0.dist-info
+          cp -Rfv /app/opt/panda3d-kphys/lib                     {install}/
+          cp -Rfv /app/opt/panda3d-krender/lib                   {install}/
           cp -Rfv /app/opt/panda3d/bin                           {install}/
           cp -Rfv /app/opt/panda3d/etc                           {install}/
           cp -Rfv /app/opt/panda3d/include                       {install}/
           cp -Rfv /app/opt/panda3d/lib                           {install}/
-          cp -Rfv /app/opt/panda3d-kphys/lib                     {install}/
-          cp -Rfv /app/opt/panda3d-krender/lib                   {install}/
+          cp -Rfv /app/opt/python/bin                            {install}/
+          cp -Rfv /app/opt/python/include/python{python_version} {install}/include/
+          cp -Rfv /app/opt/python/lib                            {install}/
           cp -Rfv /app/opt/sdl/include                           {install}/
           cp -Rfv /app/opt/sdl/lib                               {install}/
           cp -Rfv discord/c/*                                    {install}/include/
-          cp -fv discord/lib/x86_64/discord_game_sdk.so          {install}/lib/libdiscord_game_sdk.so
+          cp -fv discord/lib/x86_64/discord_game_sdk.so {install}/lib/libdiscord_game_sdk.so
+          cp -fv ${{CWD}}/jobs/sdk/METADATA {install}/lib/python{python_version}/site-packages/panda3d-1.11.0.dist-info/
 
-          {install}/bin/python3.13t -m \
+          {install}/bin/python{python_version} -m \
               pip install \
               -C "--build-option=--py-limited-api \"\"" \
               -r ${{CWD}}/jobs/sdk/requirements.txt
@@ -83,31 +85,32 @@
 
           mkdir {install}
           mkdir {install}\include
-          mkdir {install}\lib
-          xcopy /I /E /Y C:\opt\python\DLLs         {install}\DLLs
-          xcopy /I /E /Y C:\opt\python\bin          {install}\bin
-          xcopy /I /E /Y C:\opt\python\lib          {install}\lib
-          xcopy /I /E /Y C:\opt\python\libs         {install}\libs
-          xcopy /I /E /Y C:\opt\python\include      {install}\include
+          mkdir {install}\lib\site-packages\panda3d-1.11.0.dist-info
+          xcopy /I /E /Y C:\opt\panda3d-kphys\lib   {install}\lib
+          xcopy /I /E /Y C:\opt\panda3d-krender\lib {install}\lib
           xcopy /I /E /Y C:\opt\panda3d\bin         {install}\bin
           xcopy /I /E /Y C:\opt\panda3d\etc         {install}\etc
           xcopy /I /E /Y C:\opt\panda3d\include     {install}\include
           xcopy /I /E /Y C:\opt\panda3d\lib         {install}\lib
-          xcopy /I /E /Y C:\opt\panda3d-kphys\lib   {install}\lib
-          xcopy /I /E /Y C:\opt\panda3d-krender\lib {install}\lib
+          xcopy /I /E /Y C:\opt\python\DLLs         {install}\DLLs
+          xcopy /I /E /Y C:\opt\python\bin          {install}\bin
+          xcopy /I /E /Y C:\opt\python\include      {install}\include
+          xcopy /I /E /Y C:\opt\python\lib          {install}\lib
+          xcopy /I /E /Y C:\opt\python\libs         {install}\libs
           xcopy /I /E /Y C:\opt\sdl\bin             {install}\bin
           xcopy /I /E /Y C:\opt\sdl\include         {install}\include
           xcopy /I /E /Y C:\opt\sdl\lib             {install}\lib
           xcopy /I /E /Y discord\c                  {install}\include
-          copy /V /Y     discord\lib\x86_64\*.dll   {install}\bin
+          copy /V /Y discord\lib\x86_64\*.dll {install}\bin
+          copy /V /Y %CWD%\jobs\sdk\METADATA {install}\lib\site-packages\panda3d-1.11.0.dist-info
 
           set PYTHONHOME={install}
-          {install}\bin\python3.13t -m ^
+          {install}\bin\python{python_version} -m ^
               pip install ^
               -C "--build-option=--py-limited-api \"\"" ^
               -r %CWD%\jobs\sdk\requirements.txt
 
-          xcopy /I /E /Y {install} Z:\sdk
+          xcopy /I /E /Y {install} Z:\opt\sdk
 
 - project:
     name: sdk-lynx64
