--- a/jobs/sdk/requirements.txt
+++ b/jobs/sdk/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/abravalheri/setuptools.git@issue-4420
+git+https://github.com/pypa/setuptools.git@57379cdcfdd90a4e34eb8959462fabca71a723c8
 git+https://github.com/Legrandin/pycryptodome.git@13a8461e068ebca99d21e0f2f71830504b25ac7e
 git+https://github.com/Moguri/panda3d-gltf.git@948d0e9fa16423ccbd902b904b9139d1f825a0fb
 git+https://github.com/cython/cython.git@10736826646c894b8b2c9cd3799ce7142707c8ed
