--- a/jobs/python.yml
+++ b/jobs/python.yml
@@ -30,7 +30,7 @@
             make install -j 16
             patchelf --set-rpath \$ORIGIN/../lib {install}/bin/python{python_version}
             {install}/bin/python{python_version} -m ensurepip -v
-            {install}/bin/python{python_version} -m pip install git+https://github.com/abravalheri/setuptools.git@issue-4420
+            {install}/bin/python{python_version} -m pip install git+https://github.com/pypa/setuptools.git@57379cdcfdd90a4e34eb8959462fabca71a723c8
 
 - job-template:
     name: 'python{variant}-winx64'
@@ -68,7 +68,7 @@
             xcopy /I /E /Y Lib            {install}\lib
             copy /V /Y {build}\pyconfig.h {install}\include
             {install}\bin\python{python_version} -m ensurepip -v
-            {install}\bin\python{python_version} -m pip install git+https://github.com/abravalheri/setuptools.git@issue-4420
+            {install}\bin\python{python_version} -m pip install git+https://github.com/pypa/setuptools.git@57379cdcfdd90a4e34eb8959462fabca71a723c8
 
 - project:
     name: python
